feat: update single page template

--- a/templates/page.html
+++ b/templates/page.html
@@ -3,19 +3,12 @@
 <main class="wp-block-group">
   <!-- wp:post-featured-image /-->
   <!-- wp:post-title /-->
-  <!-- wp:post-author {"showAvatar":false} /-->
-  <!-- wp:post-date /-->
-  <!-- wp:post-terms {"term":"category"} /-->
   <!-- wp:spacer {"height":"40px"} -->
   <div style="height: 40px" aria-hidden="true" class="wp-block-spacer"></div>
   <!-- /wp:spacer -->
   <!-- wp:post-content /-->
-  <!-- wp:spacer {"height":"40px"} -->
-  <div style="height: 40px" aria-hidden="true" class="wp-block-spacer"></div>
-  <!-- /wp:spacer -->
-  <!-- wp:post-terms {"term":"post_tag"} /-->
-  <!-- wp:spacer {"height":"40px"} -->
-  <div style="height: 40px" aria-hidden="true" class="wp-block-spacer"></div>
+  <!-- wp:spacer {"height":100} -->
+  <div style="height: 100px" aria-hidden="true" class="wp-block-spacer"></div>
   <!-- /wp:spacer -->
 </main>
 <!-- /wp:group -->
